# exocet

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: V2.5.6-3-2302-17-A-7.csv  V2.5.6-3-2302-17-A-8.csv  V2.5.6-3-2302-17-A-9.csv  V2.5.6-3-2302-17-A.csv  V2.5.6-3-2303-18-A-0.csv  V2.5.6-3-2303-18-A-1.csv  V2.5.6-3-2303-18-A-2.csv  V2.5.6-3-2303-18-A-3.csv  V2.5.6-3-2303-18-A-4.csv  V2.5.6-3-2303-18-A-5.csv  V2.5.6-3-2303-18-A-6.csv  V2.5.6-3-2303-18-A-7.csv
docs/: protium_2500_startup_guide.md
src/: app.py  check_ranges.py  fuel_cell_controller.py  load_controller.py  main.py  ni_daq.py  plot_polarization.py
